force-app/main/default/objects/Frequency__c/Frequency__c.object-meta.xml
<CustomObject>
    <label>Frequency</label>
    <nameField>
        <displayFormat>Frequency-{0000}</displayFormat>
        <label>Frequency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Frequency</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>