force-app/main/default/objects/Frequency__c/fields/Checkbox_For_Missed_Time_10__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_For_Missed_Time_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox For Missed Time 10</label>
    <type>Checkbox</type>
</CustomField>