force-app/main/default/objects/Frequency__c/fields/Checkbox_For_Missed_Time_11__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_For_Missed_Time_11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox For Missed Time 11</label>
    <type>Checkbox</type>
</CustomField>