force-app/main/default/objects/Frequency__c/fields/Dosage_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Instruction__c</fullName>
    <label>Number of Times/Days/Weeks</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Repeat__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>