force-app/main/default/objects/Frequency__c/fields/Frequency_Timing__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Timing__c</fullName>
    <label>Frequency Timing</label>
    <type>DateTime</type>
</CustomField>