force-app/main/default/objects/Frequency__c/fields/Frequency_Unit__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Unit__c</fullName>
    <label>Frequency Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>