force-app/main/default/objects/Frequency__c/fields/Frequency_Value__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Value__c</fullName>
    <label>Frequency Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>