force-app/main/default/objects/Frequency__c/fields/Last_Activity_Date_MAR__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_MAR__c</fullName>
    <label>Last Activity Date MAR</label>
    <type>Date</type>
</CustomField>