force-app/main/default/objects/Frequency__c/fields/Last_Activity_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Time__c</fullName>
    <label>Last Activity Time</label>
    <type>Time</type>
</CustomField>