force-app/main/default/objects/Frequency__c/fields/Picklist_For_Missed_Time_12__c.field-meta.xml
<CustomField>
    <fullName>Picklist_For_Missed_Time_12__c</fullName>
    <label>Picklist For Missed Time 12</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missed</fullName>
                <default>true</default>
                <label>Missed</label>
            </value>
            <value>
                <fullName>Taken</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>