force-app/main/default/objects/Frequency__c/fields/Prescription_Order__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescription Order</label>
    <referenceTo>Prescription_Order__c</referenceTo>
    <relationshipLabel>Frequency</relationshipLabel>
    <relationshipName>Frequency</relationshipName>
    <type>Lookup</type>
</CustomField>