force-app/main/default/objects/Frequency__c/fields/Quantity_11__c.field-meta.xml
<CustomField>
    <fullName>Quantity_11__c</fullName>
    <label>Quantity 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>