force-app/main/default/objects/Frequency__c/fields/Quantity_12__c.field-meta.xml
<CustomField>
    <fullName>Quantity_12__c</fullName>
    <label>Quantity 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>