force-app/main/default/objects/Frequency__c/fields/Repeat__c.field-meta.xml
<CustomField>
    <fullName>Repeat__c</fullName>
    <label>Repeat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&apos;n&apos; times a day</fullName>
            </value>
            <value>
                <fullName>After every &apos;n&apos; hours</fullName>
            </value>
            <value>
                <fullName>After lunch</fullName>
            </value>
            <value>
                <fullName>After supper/Dinner</fullName>
            </value>
            <value>
                <fullName>Before Breakfast</fullName>
            </value>
            <value>
                <fullName>Custom pheno</fullName>
            </value>
            <value>
                <fullName>Once  a day (AM)</fullName>
            </value>
            <value>
                <fullName>Once  a day (HS)</fullName>
            </value>
            <value>
                <fullName>Once a day  midday</fullName>
            </value>
            <value>
                <fullName>Once a day (Qam)</fullName>
            </value>
            <value>
                <fullName>Once a day (QHS)</fullName>
            </value>
            <value>
                <fullName>At a specific time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>