force-app/main/default/objects/Frequency__c/fields/Start_Time_10__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_10__c</fullName>
    <label>Start Time 10</label>
    <type>Time</type>
</CustomField>