force-app/main/default/objects/Frequency__c/fields/Start_Time_11__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_11__c</fullName>
    <label>Start Time 11</label>
    <type>Time</type>
</CustomField>