force-app/main/default/objects/Frequency__c/fields/Start_Time_12__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_12__c</fullName>
    <label>Start Time 12</label>
    <type>Time</type>
</CustomField>