force-app/main/default/objects/Frequency__c/fields/Strength_10__c.field-meta.xml
<CustomField>
    <fullName>Strength_10__c</fullName>
    <label>Strength 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>