force-app/main/default/objects/Frequency__c/fields/Strength_11__c.field-meta.xml
<CustomField>
    <fullName>Strength_11__c</fullName>
    <label>Strength 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>