force-app/main/default/objects/Frequency__c/fields/Strength_12__c.field-meta.xml
<CustomField>
    <fullName>Strength_12__c</fullName>
    <label>Strength 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>