force-app/main/default/objects/Frequency__c/fields/Unit_12__c.field-meta.xml
<CustomField>
    <fullName>Unit_12__c</fullName>
    <label>Unit 12</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>capsule</fullName>
            </value>
            <value>
                <fullName>film</fullName>
            </value>
            <value>
                <fullName>liquid</fullName>
            </value>
            <value>
                <fullName>packet</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>tablet chewable</fullName>
            </value>
            <value>
                <fullName>tablet delayed release</fullName>
            </value>
            <value>
                <fullName>tablet dispersible</fullName>
            </value>
            <value>
                <fullName>tablet extended release 12h</fullName>
            </value>
            <value>
                <fullName>tablet sublingual</fullName>
            </value>
            <value>
                <fullName>tablet subliungual</fullName>
            </value>
            <value>
                <fullName>Tablet Therapy Pack</fullName>
            </value>
            <value>
                <fullName>tabletq</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>